--- a/TaskManager/pom.xml
+++ b/TaskManager/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>TaskManager</name>
 	<description>Spring Boot Docker Project</description>
+	<packaging>war</packaging>
 	<url/>
 	<licenses>
 		<license/>
